# playsync

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  sync.rs  youtube.rs
